# empty-irssi

./: README.md
help/: Makefile.am
src/: Makefile.am  cmd.c  module.c
